fixes alignments

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -12,7 +12,9 @@
   margin-left: 10px;
   margin-right:10px;
   width: 100%;
+  margin-top: 5px;
 }
 .sort-btn {
   float: right;
+  margin-top: 10px;
 }
